fix(styles): fix form control grid spacing

--- a/packages/styles/scss/components/_file-upload.scss
+++ b/packages/styles/scss/components/_file-upload.scss
@@ -78,7 +78,6 @@
 
   &--list {
     order: 4;
-    grid-area: uploads;
   }
 
   &--list-item {
